codex-rs/tui/src/bottom_pane/tests/snapshots/codex_tui__bottom_pane__tests__actionable_banner_tests__information_banner_persistent.snap
---
source: tui/src/bottom_pane/tests/actionable_banner_tests.rs
expression: rendered
---
                                                                      
  Usage limit reached                                                 
  You can change models or request more usage.                        
                                                                      
╭────────────────────────────────────────────────────────────────────╮
┃ ›                                                                  │
╰────────────────────────────────────────────────────────────────────╯
  ? shortcuts                                      100% context left
